force-app/src/objects/TR1__Call_List_Member__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Call_List_Contact__c</fullName>
        <externalId>true</externalId>
        <label>Call List - Contact</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Call_List__c</fullName>
        <label>Call List</label>
        <referenceTo>TR1__Call_List__c</referenceTo>
        <relationshipLabel>Call List Members</relationshipLabel>
        <relationshipName>Call_List_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Daxtra_Id__c</fullName>
        <formula>TR1__Contact__r.TR1__External_Candidate_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Candidate Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Details__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ TR1__Contact__c ,  TR1__Contact__r.FirstName &amp;&quot; &quot; &amp;  TR1__Contact__r.LastName, &quot;_blank&quot;) 
&amp; BR() &amp; HYPERLINK( &quot;mailto:&quot; &amp; TR1__Contact__r.Email , TR1__Contact__r.Email,&quot;_self&quot;)
&amp; BR() &amp; TR1__Contact__r.Phone</formula>
        <label>Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.TR1__Is_Calllist_Contact__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call List Members</relationshipLabel>
        <relationshipName>Call_List_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Email__c</fullName>
        <formula>HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p2_lkid=&quot; &amp; TR1__Contact__c &amp; &quot;&amp;rtype=003&amp;p3_lkid=&quot; &amp; TR1__Call_List__r.Id &amp; &quot;&amp;retURL=%2F&quot; &amp; TR1__Call_List__c , IMAGE(&quot;/resource/TR1__SLDS092/assets/icons/utility/email_60.png&quot;,&quot;Email&quot;,32,32),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Log_a_Call__c</fullName>
        <formula>HYPERLINK(&quot;/apex/TR1__calllog?CallListId=&quot;+TR1__Call_List__c+&quot;&amp;retURL=&quot;+TR1__Call_List__c+&quot;&amp;contactId=&quot;+TR1__Contact__c,IMAGE(&quot;/resource/TR1__SLDS092/assets/icons/utility/call_60.png&quot;,&quot;Log a Call&quot;,32,32),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log a Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SMWS_Date_Time__c</fullName>
        <label>SMWS Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__SMWS_Status_Code__c</fullName>
        <label>SMWS Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SMWS_Status__c</fullName>
        <label>SMWS Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__View_Activities__c</fullName>
        <formula>HYPERLINK(&quot;/apex/TR1__viewContactActivities?id=&quot;+ TR1__Contact__c , IMAGE(&quot;/resource/TR1__ViewActivities&quot;,&quot;View Activities&quot;,32,32),&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Activities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__View_Resume__c</fullName>
        <formula>HYPERLINK(&quot;/apex/TR1__ResumeViewer?id=&quot;+ TR1__Contact__c ,IMAGE(&quot;/resource/TR1__ViewResume&quot;,$Label.TR1__View_Resume),&quot;_blank&quot;)</formula>
        <label>View Resume</label>
        <type>Text</type>
    </fields>
    <label>Call List Member</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Mem-{0000000}</displayFormat>
        <label>Call List Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call List Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>